[package]
name = "quantized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
candle-core         = { version = "0.5.0", features = ["cuda", "cudnn"] }
candle-nn           = { version = "0.5.0", features = ["cuda"] }
candle-transformers = { version = "0.5.0", features = ["cuda"] }
hf-hub     = "0.3.2"
structopt = "0.3.26"
tokenizers = "0.19.1"
